gitops/apps/iam/midpoint/deployment-argocd-sync-wave-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: midpoint
  namespace: iam
  annotations:
    argocd.argoproj.io/sync-wave: "40"
