gitops/apps/iam/midpoint/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: midpoint
  namespace: iam
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "16m"
spec:
  ingressClassName: nginx
  rules:
    - host: mp.4.245.81.5.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: midpoint
                port:
                  number: 8080
